# data-engineer-handbook

bootcamp/materials/1-dimensional-data-modeling/lecture-lab/: game_vertices.sql  player_vertices.sql  players_scd_table.sql
bootcamp/materials/1-dimensional-data-modeling/tianyang_labs/: DE_Bootcamp_lab1.sql  DE_Bootcamp_lab2.sql  DE_Bootcamp_lab3.sql
bootcamp/materials/2-fact-data-modeling/tianyang_lab/: fact_data_modeling_lab1.sql  fact_data_modeling_lab2.sql  fact_data_modeling_lab3.sql  hourly_microbatch_dedupe.sql
bootcamp/materials/3-spark-fundamentals/: pyproject.toml
bootcamp/materials/3-spark-fundamentals/notebooks/: event_data_pyspark.ipynb
bootcamp/materials/4-apache-flink-training/: pyproject.toml
bootcamp/materials/4-apache-flink-training/sql/: init.sql
bootcamp/materials/5-kpis-and-experimentation/: pyproject.toml  requirements.txt
