[tool.poetry]
name = "3-spark-fundamentals"
version = "0.1.0"
description = ""
authors = ["Tianyang Gao"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
chispa = "^0.10.1"
pytest = "^8.3.4"
pyspark = {extras = ["sql"], version = "^3.5.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
