[tool.poetry]
name = "4-apache-flink-training"
version = "0.1.0"
description = ""
authors = ["Tianyang Gao"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
apache-flink = "1.16.2"
psycopg2-binary = "2.9.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
